[package]
name = "fastredis"
version = "0.1.1"
authors = ["wellinthatcase"]
edition = "2018"
description = "A small, hyper fast Python binding exposing a simple interface to Redis commands."

[lib]
name = 'fastredis'
crate-type = ["cdylib"]

[dependencies]
redis = "0.16.0"

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]