[package]
name = "suredis"
version = "0.1.0"
authors = ["wellinthatcase"]
edition = "2018"
description = "A speedy & simplistic library at runtime for an incredibly straightforward Redis interface."

[lib]
name = "suredis"
crate-type = ["cdylib"]

[dependencies]
redis = "0.16.0"
pyo3 = { git = "https://github.com/PyO3/pyo3", features = ["extension-module"]}

[profile.release]
lto = "fat"
codegen-units = 1